# anyllm

./: CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
.github/workflows/: release.yml
docs/plans/: 2025-02-11-phase1-skeleton.md  2026-02-15-ui-polish-design.md  2026-02-15-video-download.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  proxy.rs  request_logs.rs  video.rs
src-tauri/src/server/: router.rs
src-tauri/src/video/: bilibili.rs  douyin.rs  downloader.rs  mod.rs
src/components/: data-table.tsx  empty-state.tsx  page-header.tsx  status-badge.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  pagination.tsx  select.tsx  table.tsx
src/lib/: i18n.tsx  tauri.ts
src/pages/: Channels.tsx  Dashboard.tsx  ModelMappings.tsx  Proxy.tsx  RequestLogs.tsx  Settings.tsx  Tokens.tsx  UsageStats.tsx  VideoDownload.tsx
src/styles/: globals.css
