[package]
name = "omnikit"
version = "0.1.0"
description = "A Multi-functional Toolkit Desktop App"
authors = [""]
edition = "2021"

[lib]
name = "omnikit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
async-stream = "0.3"
futures-core = "0.3"
tokio-stream = "0.1"
bytes = "1"
rand = "0.9"
jsonata-rs = "0.3"
bumpalo = "3"
async-trait = "0.1"
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
dirs = "6"
urlencoding = "2"
